--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,15 @@ spring:
     password: ${POSTGRES_PASSWORD}
     driver-class-name: org.postgresql.Driver
 
+  cache:
+    type: redis
+    cache-names: applicants,jobs
+  data:
+    redis:
+      host: localhost
+      port: 6379
+
+
   jpa:
     show-sql: true
     hibernate:
