--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,8 +20,7 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: update
-
     properties:
       hibernate:
-        format_sql: true
+        '[format_sql]': true
         dialect: org.hibernate.dialect.PostgreSQLDialect
